src/test/ui/macros/issue-84632-eager-expansion-recursion-limit.stderr
error: recursion limit reached while expanding `concat!`
  --> $DIR/issue-84632-eager-expansion-recursion-limit.rs:8:28
   |
LL |     (A, $($A:ident),*) => (concat!("", a!($($A),*)))
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     a!(A, A, A, A, A, A, A, A, A, A, A);
   |     ------------------------------------ in this macro invocation
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "30"]` attribute to your crate (`issue_84632_eager_expansion_recursion_limit`)
   = note: this error originates in the macro `a` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

